src/main/java/com/example/team_work_management/exception/error/TaskNotFoundException.java
package com.example.team_work_management.exception.error;

public class TaskNotFoundException extends RuntimeException{
    public TaskNotFoundException(String message){
        super(message);
    }
}
